# Humanoid-GPT

./: .gitignore  README.md  pyproject.toml
deploy/: DEPLOY.md  constants.py  hand_control.py  keyboard_cmd.py  play_track.py  real_robot.py  retarget.py  walk_policy.py
deploy/brainco/: BRAINCO.md  brainco_controller.py  noitom_hand_retarget.py  play_track_brainco.py
deploy/onboard_deploy/: DEPLOY_ONBOARD.md  _bench_utils.py  bench_noitom_stream.py  bench_offline.py  bench_online.py  bench_online_full.py  bench_onnx_infer.py  play_track_onboard.py
deploy/onboard_deploy_wo_GMR/: DEPLOY_ONBOARD_WO_GMR.md  bench_net_recv.py  host_sender.py  net_recv.py  play_track_onboard_wo_GMR.py  play_track_onboard_wo_GMR_brainco.py  protocol.py
projects/: __init__.py
projects/gqs/: analyze_scores.py  global_weighted_fps.py
projects/hme/: dataset.py  model.py  train.py
projects/tracking_transformer/: app.py  deploy.py  eval_parallel.py  infer_utils.py  inference.py
scripts/: app.py  eval_parallel.py  inference.py  vis.py
storage/assets/unitree_g1_4010/: g1_mjx_track.xml  scene_mjx_feetonly_flat_terrain.xml  scene_mjx_loco.xml
storage/assets/unitree_g1_5010/: CHANGELOG.md  README.md  debug_axis.xml  g1_mjx.xml  g1_mjx_track.xml  scene_mjx_body_pose.xml  scene_mjx_feetonly_flat_terrain.xml  scene_mjx_feetonly_rough_terrain.xml  scene_mjx_track.xml  scene_mjx_track_debug.xml
storage/assets/unitree_g1_brainco/: G1_brainco_hands.xml  G1_inspire_hands.xml  g1.xml  g1_mjx.xml  g1_mjx_dance.xml  g1_mjx_feetonly.xml  g1_mjx_feetonly_restricted.xml  g1_mjx_feetonly_torque.xml  g1_mjx_full_contact.xml  scene_mjx.xml  scene_mjx_dance.xml  scene_mjx_dance_debug.xml  scene_mjx_feetonly.xml  (+3 more)
storage/configs/: cluster_dict_AMASS-train_n50.json
tracking/: constants.py  convert_parallel.py  convert_qpos2kpt.py  infer_utils.py  metrics.py  policy.py
utils/: extract_clips.py  git_utils.py  merge_videos.py  path.py  record_video_parallel.py  ref_ghost.py  sim_base.py  sim_mj.py  sim_mjx.py  transforms_jax.py  transforms_np.py  video_utils.py
(+1 files in other folders)
